k8s/tetra.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetra
  labels:
    app.kubernetes.io/name: tetra
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: tetra
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tetra
    spec:
      # Avoid scheduling on the same node
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/name: tetra
          maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule

      imagePullSecrets:
        - name: docker-registry-creds
      containers:
        - name: tetra
          image: docker.super.fish/tetra/tetra:latest
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /health
          livenessProbe:
            httpGet:
              path: /health
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: tetra
  labels:
    app.kubernetes.io/name: tetra
spec:
  selector:
    app.kubernetes.io/name: tetra
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: http

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tetra
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`go.super.fish`)
      services:
        - kind: Service
          name: tetra
          port: http
          scheme: http
  tls:
    secretName: go.super.fish
